packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/repo_projected_retrieval_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "hits": [
    {
      "kind": "page",
      "node": null,
      "page": {
        "doc_ids": [
          "repo:gateway-sync:doc:docs/solve.md"
        ],
        "example_ids": [
          "repo:gateway-sync:example:examples/solve_demo.jl"
        ],
        "format_hints": [
          "md"
        ],
        "kind": "reference",
        "module_ids": [],
        "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md",
        "paths": [
          "docs/solve.md",
          "examples/solve_demo.jl"
        ],
        "repo_id": "gateway-sync",
        "sections": [
          {
            "body": "Projected reference page for `solve`.\nFormat hints:\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`",
            "level": 1,
            "paths": [
              "docs/solve.md",
              "examples/solve_demo.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#overview",
            "title": "Overview"
          },
          {
            "body": "Symbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)",
            "level": 2,
            "paths": [
              "src/GatewaySyncPkg.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `solve` (docs/solve.md)",
            "level": 2,
            "paths": [
              "docs/solve.md"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#sources",
            "title": "Documentation"
          },
          {
            "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
            "level": 2,
            "paths": [
              "examples/solve_demo.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#examples",
            "title": "Examples"
          }
        ],
        "symbol_ids": [
          "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "title": "solve"
      }
    },
    {
      "kind": "page",
      "node": null,
      "page": {
        "doc_ids": [
          "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve"
        ],
        "example_ids": [
          "repo:gateway-sync:example:examples/solve_demo.jl"
        ],
        "format_hints": [
          "julia_docstring"
        ],
        "kind": "reference",
        "module_ids": [],
        "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve",
        "paths": [
          "examples/solve_demo.jl",
          "src/GatewaySyncPkg.jl#symbol:solve"
        ],
        "repo_id": "gateway-sync",
        "sections": [
          {
            "body": "Projected reference page for `solve`.\nFormat hints:\n- `julia_docstring`\nSource paths:\n- `examples/solve_demo.jl`\n- `src/GatewaySyncPkg.jl#symbol:solve`",
            "level": 1,
            "paths": [
              "examples/solve_demo.jl",
              "src/GatewaySyncPkg.jl#symbol:solve"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#overview",
            "title": "Overview"
          },
          {
            "body": "Symbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)",
            "level": 2,
            "paths": [
              "src/GatewaySyncPkg.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `solve` (src/GatewaySyncPkg.jl#symbol:solve)",
            "level": 2,
            "paths": [
              "src/GatewaySyncPkg.jl#symbol:solve"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#sources",
            "title": "Documentation"
          },
          {
            "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
            "level": 2,
            "paths": [
              "examples/solve_demo.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#examples",
            "title": "Examples"
          }
        ],
        "symbol_ids": [
          "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "title": "solve"
      }
    },
    {
      "kind": "page_index_node",
      "node": {
        "doc_id": "reference/solve-69592caeddee",
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/solve-69592caeddee#solve",
        "node_title": "solve",
        "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md",
        "page_kind": "reference",
        "page_title": "solve",
        "path": "reference/solve-69592caeddee.md",
        "repo_id": "gateway-sync",
        "structural_path": [
          "solve"
        ],
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: md\n:END:"
      },
      "page": {
        "doc_ids": [
          "repo:gateway-sync:doc:docs/solve.md"
        ],
        "example_ids": [
          "repo:gateway-sync:example:examples/solve_demo.jl"
        ],
        "format_hints": [
          "md"
        ],
        "kind": "reference",
        "module_ids": [],
        "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md",
        "paths": [
          "docs/solve.md",
          "examples/solve_demo.jl"
        ],
        "repo_id": "gateway-sync",
        "sections": [
          {
            "body": "Projected reference page for `solve`.\nFormat hints:\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`",
            "level": 1,
            "paths": [
              "docs/solve.md",
              "examples/solve_demo.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#overview",
            "title": "Overview"
          },
          {
            "body": "Symbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)",
            "level": 2,
            "paths": [
              "src/GatewaySyncPkg.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `solve` (docs/solve.md)",
            "level": 2,
            "paths": [
              "docs/solve.md"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#sources",
            "title": "Documentation"
          },
          {
            "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
            "level": 2,
            "paths": [
              "examples/solve_demo.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md#examples",
            "title": "Examples"
          }
        ],
        "symbol_ids": [
          "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "title": "solve"
      }
    },
    {
      "kind": "page_index_node",
      "node": {
        "doc_id": "reference/solve-c6d7a0c3b0a4",
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/solve-c6d7a0c3b0a4#solve",
        "node_title": "solve",
        "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve",
        "page_kind": "reference",
        "page_title": "solve",
        "path": "reference/solve-c6d7a0c3b0a4.md",
        "repo_id": "gateway-sync",
        "structural_path": [
          "solve"
        ],
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: julia_docstring\n:END:"
      },
      "page": {
        "doc_ids": [
          "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve"
        ],
        "example_ids": [
          "repo:gateway-sync:example:examples/solve_demo.jl"
        ],
        "format_hints": [
          "julia_docstring"
        ],
        "kind": "reference",
        "module_ids": [],
        "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve",
        "paths": [
          "examples/solve_demo.jl",
          "src/GatewaySyncPkg.jl#symbol:solve"
        ],
        "repo_id": "gateway-sync",
        "sections": [
          {
            "body": "Projected reference page for `solve`.\nFormat hints:\n- `julia_docstring`\nSource paths:\n- `examples/solve_demo.jl`\n- `src/GatewaySyncPkg.jl#symbol:solve`",
            "level": 1,
            "paths": [
              "examples/solve_demo.jl",
              "src/GatewaySyncPkg.jl#symbol:solve"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#overview",
            "title": "Overview"
          },
          {
            "body": "Symbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)",
            "level": 2,
            "paths": [
              "src/GatewaySyncPkg.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `solve` (src/GatewaySyncPkg.jl#symbol:solve)",
            "level": 2,
            "paths": [
              "src/GatewaySyncPkg.jl#symbol:solve"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#sources",
            "title": "Documentation"
          },
          {
            "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
            "level": 2,
            "paths": [
              "examples/solve_demo.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve#examples",
            "title": "Examples"
          }
        ],
        "symbol_ids": [
          "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "title": "solve"
      }
    },
    {
      "kind": "page",
      "node": null,
      "page": {
        "doc_ids": [
          "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol:solve",
          "repo:gateway-sync:doc:docs/solve.md"
        ],
        "example_ids": [
          "repo:gateway-sync:example:examples/solve_demo.jl"
        ],
        "format_hints": [
          "julia_docstring",
          "md"
        ],
        "kind": "reference",
        "module_ids": [
          "repo:gateway-sync:module:GatewaySyncPkg"
        ],
        "page_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
        "paths": [
          "docs/solve.md",
          "examples/solve_demo.jl",
          "src/GatewaySyncPkg.jl",
          "src/GatewaySyncPkg.jl#symbol:solve"
        ],
        "repo_id": "gateway-sync",
        "sections": [
          {
            "body": "Projected reference page for `GatewaySyncPkg.solve`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/GatewaySyncPkg.jl`\n- `src/GatewaySyncPkg.jl#symbol:solve`",
            "level": 1,
            "paths": [
              "docs/solve.md",
              "examples/solve_demo.jl",
              "src/GatewaySyncPkg.jl",
              "src/GatewaySyncPkg.jl#symbol:solve"
            ],
            "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#overview",
            "title": "Overview"
          },
          {
            "body": "Modules:\n- `GatewaySyncPkg` (src/GatewaySyncPkg.jl)\n\nSymbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)",
            "level": 2,
            "paths": [
              "src/GatewaySyncPkg.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `solve` (docs/solve.md)\n- `solve` (src/GatewaySyncPkg.jl#symbol:solve)",
            "level": 2,
            "paths": [
              "docs/solve.md",
              "src/GatewaySyncPkg.jl#symbol:solve"
            ],
            "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#sources",
            "title": "Documentation"
          },
          {
            "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
            "level": 2,
            "paths": [
              "examples/solve_demo.jl"
            ],
            "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#examples",
            "title": "Examples"
          }
        ],
        "symbol_ids": [
          "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "title": "GatewaySyncPkg.solve"
      }
    }
  ],
  "repo_id": "gateway-sync"
}
