packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/search_ast_markdown_property_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "hitCount": 2,
  "hits": [
    {
      "crateName": "docs",
      "language": "markdown",
      "lineEnd": 6,
      "lineStart": 1,
      "name": "ID",
      "nodeKind": "property",
      "ownerTitle": "Studio Functional Ledger",
      "path": "docs/index.md",
      "projectName": "main",
      "rootLabel": "docs",
      "score": 0.8,
      "signature": ":ID: SearchBarProtocol"
    },
    {
      "crateName": "docs",
      "language": "markdown",
      "lineEnd": 6,
      "lineStart": 1,
      "name": "OBSERVE",
      "nodeKind": "observation",
      "ownerTitle": "Studio Functional Ledger",
      "path": "docs/index.md",
      "projectName": "main",
      "rootLabel": "docs",
      "score": 0.8,
      "signature": ":OBSERVE: lang:typescript scope:\"src/components/SearchBar/**\" \"export const SearchBar: React.FC<SearchBarProps> = ({ $$$ })\""
    }
  ],
  "query": "SearchBar",
  "selectedScope": "definitions"
}
